--- a/css/global.css
+++ b/css/global.css
@@ -119,7 +119,8 @@ a:hover {
     font-size: 17px;
     font-weight: 500;
     line-height: 22px;
-    li{
+
+    li {
         margin: 0;
     }
 }
@@ -127,17 +128,23 @@ a:hover {
 .header-nav-links {
     margin-left: 40px;
 }
-.nav-link-selected{
+
+.nav-link-selected {
     a {
         color: var(--Primary);
         font-weight: bold;
     }
 }
+
 .logo {
     margin-left: 90px;
 }
 
 .nav-link:hover {
+    color: var(--Primary);
+}
+
+.learn-more p {
     color: var(--Primary);
 }
 
@@ -214,34 +221,112 @@ a:hover {
     box-shadow: 10px 5px 5px var(--NeutralMedium);
 }
 
+
+#newsletter,
+#newsletter h2,
+#newsletter h3,
+#newsletter form {
+    background-color: var(--SecondaryLight);
+}
+
+#newsletter {
+    width: 1200px;
+    height: 400px;
+    margin-bottom: 150px;
+
+    h2 {
+        padding: 80px 0 30px;
+
+        font-size: 2.5em;
+        font-weight: bold;
+    }
+
+    h3 {
+        font-size: 2em;
+    }
+
+    form {
+        width: 50%;
+        display: flex;
+        flex-direction: row;
+
+        #email {
+            background-image: url("../images/newsletter/icon/mail.svg");
+            background-repeat: no-repeat;
+            background-position: 5%;
+            border: 1px solid var(--White);
+            text-align: center;
+            width: 90%;
+        }
+
+        input {
+            background-color: var(--White);
+            border: none;
+            padding: 20px;
+            font-size: 18px;
+            display: block;
+            margin: 20px auto;
+        }
+
+        .btn {
+            margin-left: 20px;
+        }
+
+        btn:hover {
+            cursor: pointer;
+            color: var(--SecondaryDark);
+        }
+    }
+
+    input[type="button"] {
+        background-color: var(--Primary);
+        color: var(--White);
+    }
+
+    .newsletter input[type="email"]:hover {
+        border: 1px solid var(--Black);
+    }
+
+}
+
 .footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 100%;
+    margin-bottom: 150px;
+    .logo {
+        margin-bottom: 20px;
+    }
+    p {
+        text-align: left;
+    }
+    .address-info {
+        text-align: left;
+        p {
+            margin: 30px 0;
+        }
+    }
+    .sitemap {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        list-style: none;
+
+        vertical-align:bottom;
+        li {
+            flex: 0 32%;
+            height: 60px;
+            margin-bottom: 2%;
+        }
+    }
 }
 
-.footer .logo {
-    margin-bottom: 20px;
-}
 
-.footer p {
-    text-align: left;
-}
 
-.address-info p {
-    margin: 30px 0;
-}
 
-.address-info {
-    text-align: left;
-}
 
-.sitemap {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
+
 
 .sitemap li {
     flex: 0 32%;
