--- a/css/burger.css
+++ b/css/burger.css
@@ -1,88 +1,86 @@
 .nav-burger {
-    width: 300px;
-    cursor: pointer;
-    z-index: 200;
+  display: none;
+  width: 100px;
+  cursor: pointer;
+  z-index: 200;
 
-    .line {
-        width: 25px;
-        height: 3px;
-        background-color: #1d1d1d;
-        margin: 3px;
-    }
+  .line {
+    width: 25px;
+    height: 3px;
+    background-color: #1d1d1d;
+    margin: 3px;
+  }
 }
 
 .nav-burger:hover {
-    cursor: pointer;
-    z-index: 200;
+  cursor: pointer;
+  z-index: 200;
 }
 
 .header-nav-links-vertical {
-    position: absolute;
-    top: -1500px;
-    right: 0;
-    width: 200px;
-    height: 110vh;
-    gap: 20px;
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    flex-direction: column;
-    align-items: center;
-    background: linear-gradient(
-      to bottom,
+  
+  position: absolute;
+  top: -1500px;
+  right: 0;
+  width: 200px;
+  height: 110vh;
+  gap: 20px;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  flex-direction: column;
+  align-items: center;
+  background: linear-gradient(to bottom,
       rgba(169, 169, 169, 1) 0%,
-      rgba(169, 169, 169, 0) 100%
-    );
-    justify-content: flex-start;
-    z-index: 100;
-    transition: all 0.3s ease-out;
-  }
-  
-  .header-nav-links{
-    display: none;
+      rgba(169, 169, 169, 0) 100%);
+  justify-content: flex-start;
+  z-index: 100;
+  transition: all 0.3s ease-out;
+}
 
-  }
+.header-nav-links {
+  display: none;
 
-  .nav-active {
-    right: 0;
-    top: 0;
-    transition: all 0.3s ease-out;
-  }
-  
-  .header-nav-links li,
-  .header-nav-links li a {
-    margin-left: 10px;
-    text-align: start;
-    margin-top: 15px;
-    width: 100px;
-    padding: 5px;
-  }
-  .header-nav-links-vertical  li:first-child {
+}
+
+.nav-active {
+  right: 0;
+  top: 0;
+  transition: all 0.3s ease-out;
+}
+
+.header-nav-links li,
+.header-nav-links li a {
+  margin-left: 10px;
+  text-align: start;
+  margin-top: 15px;
+  width: 100px;
+  padding: 5px;
+}
+
+.header-nav-links-vertical {
+  li:first-child {
     margin-top: 20vh;
   }
-  .nav-link {
-    text-decoration: none;
-    color: #fff;
-    margin-right: 20px;
-  }
+}
 
-  @media screen and (min-width: 769px) {
-    .nav-burger {
-      display: none;
-    }
-  
-    .header-nav-links-vertical {
-      display: none;
-      display: flex;
-      li {
-        list-style-type: none;
-      }
-      li a{
-        color: grey;
-      }
-    }
-  
-    
+.nav-link {
+  text-decoration: none;
+  color: #fff;
+  margin-right: 20px;
+}
+
+@media (max-width: 600px) {
+  .header-nav-links{
+    display: none;
   }
-  
+  .nav-burger {
+   display: block;
+  }
+}
+@media (max-width: 800px) {
+  .nav-burger {
+    display: none;
+  }
+}
