--- a/css/project.css
+++ b/css/project.css
@@ -3,18 +3,9 @@ h1 {
 }
 
 #project {
-  .project-image-section {
-    width: 100%;
-    margin-top: 50px;
-    margin-bottom: 30px;
-  }
+  
 
-  .project-image {
-    width: 90%;
-    height: 70vh;
-    object-fit: cover;
-    filter: drop-shadow(5px 5px 20px #c414ca74);
-  }
+  
 
   .project-description {
     font-family: Roboto;
@@ -58,6 +49,23 @@ h1 {
       margin-right: 40px;
     }
   }
-
-
+  
 }
+.project-image-section {
+  width: 100%;
+  margin-top: 50px;
+  margin-bottom: 30px;
+  .project-image {
+    object-fit: cover;
+  }
+}
+@media(max-width:720px) {
+  .project-image-section{
+    .project-image{
+      .subtitle{background-color:blanchedalmond;}
+      width:90%;
+  
+    }
+  }
+}
+  
