--- a/css/scroll.css
+++ b/css/scroll.css
@@ -17,14 +17,14 @@
   height: 50px;
   width: 50px;
   color: var(--White);
-  animation: movebtn 3s ease-in-out infinite;
+  animation: moveBtn 3s ease-in-out infinite;
   display: flex;
   justify-content: center;
   align-items: center;
   visibility: hidden;
 }
 
-@keyframes movebtn {
+@keyframes moveBtn {
   0% {
     transform: translateY(10px);
   }
