--- a/css/project.css
+++ b/css/project.css
@@ -60,11 +60,12 @@ h1 {
   }
 }
 @media(max-width:720px) {
-  .project-image-section{
-    .project-image{
-      .subtitle{background-color:blanchedalmond;}
-      width:90%;
-  
+  #project{
+    .project-image-section{
+      .project-image{
+        background-color:blanchedalmond;
+        width:90%;
+      }
     }
   }
 }
