--- a/css/global.css
+++ b/css/global.css
@@ -123,7 +123,7 @@ a:hover {
 
 .header-nav-links-vertical {
     position: absolute;
-    top: -50%;
+    top: -500px;
     right: 0;
     width: 200px;
     height: 50%;
@@ -377,5 +377,31 @@ a.btn:hover {
 @media(min-width:720px) {
     .header-nav-links-vertical {
         visibility: hidden;
+    }
+}
+
+@media(max-width:350px) {
+    #newsletter {
+        form {
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+    .header-nav {
+        justify-content: flex-end;
+        .nav-burger {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .header-nav-links {
+            display: none;
+        }
+    }
+}
+
+@media(max-width:450px) {
+    .header-nav {
+        justify-content: flex-end;
     }
 }
